--- a/202108/20210827.md
+++ b/202108/20210827.md
@@ -47,7 +47,7 @@
 
 ⏪ 회고
 -----------------------------------------------------
-- 어제는 
+- 
 
 🔰 내일 계획
 -----------------------------------------------------
@@ -57,7 +57,7 @@
 
 🔥 일주일 계획 
 -----------------------------------------------------
-- [X] [Java] 파트 공부 (이어서) 9/15
+- [ ] [Java] 파트 공부 (이어서) 9/15
 - [ ] 쉽게 배우는 git/github 13/22
 - [ ] [programmers] 하루에 연습문제 하나씩 풀기 2/7
 
