--- a/202108/20210828.md
+++ b/202108/20210828.md
@@ -16,40 +16,53 @@
 - 자바 공부
     - 자바의 데이터 타입은 두 종류.
     - 기본형Primitive Type
+        > ```
         > 반드시 사용하기 전에 선언Declaerd되어야 한다.
         > OS에 따라 자료형의 길이가 변하지 않는다.
         > 비객체 타입. null 값을 가질 수 없으며 Wrapper Class를 활용해야 한다.
         > Stack 메모리에 저장된다.
+        > ``` 
         > boolean
-            > yes/no, on/off 등 논리적 구현에 사용된다.
-            > 1byte로 가장 크기가 작다.
+        >    > yes/no, on/off 등 논리적 구현에 사용된다.
+        >    > 1byte로 가장 크기가 작다.
+        >    > 
         > char
-            > 워낙 String을 자주 써서 잘 쓰이지 않는다.
+        >    > 워낙 String을 자주 써서 잘 쓰이지 않는다.
+        >    > 
         > byte
-            > 이진데이터를 다루는데 사용되는 타입이다.
+        >    > 이진데이터를 다루는데 사용되는 타입이다.
+        >    > 
         > short
-            > c언어와의 호환을 위해 사용되는 타입으로 잘 사용되지 않는다.
+        >    > c언어와의 호환을 위해 사용되는 타입으로 잘 사용되지 않는다.
+        >    > 
         > int
-            > 정수연산을 하기 위한 기본타입으로 byte 혹은 short의 번수가 연산을 하면 연산의 결과는 int형이 된다.
+        >    > 정수연산을 하기 위한 기본타입으로 byte 혹은 short의 번수가 연산을 하면 연산의 결과는 int형이 된다.
+        >    > 
         > long
-            > 수치가 큰 데이터를 다루는 프로그램에서 주로 사용한다.
-            > long 타입의 변수를 초기화 할 때에는 정수값 뒤에 알파벳 L을 붙여서 long 타입(8byte)의 정수 데이터임을 알려주어야 한다.
+        >    > 수치가 큰 데이터를 다루는 프로그램에서 주로 사용한다.
+        >    > long 타입의 변수를 초기화 할 때에는 정수값 뒤에 알파벳 L을 붙여서 long 타입(8byte)의 정수 데이터임을 알려주어야 한다.
+        >    > 
         > float, double
-            > 실수를 가수와 지수 형식으로 저장하는 부동소수점 방식으로 저장된다.
-            > double이 float보다 정밀하게 표현할 수 있다.
-            > 실수의 기본 타입은 double이기 때문에 long과 마찬가지로 float형임을 나타내기 위해 F를 붙여준다.
+        >    > 실수를 가수와 지수 형식으로 저장하는 부동소수점 방식으로 저장된다.
+        >    > double이 float보다 정밀하게 표현할 수 있다.
+        >    > 실수의 기본 타입은 double이기 때문에 long과 마찬가지로 float형임을 나타내기 위해 F를 붙여준다.
+        >    > 
     - 참조형Reference Type
+        > ```
         > 기본형을 제외한 모든 타입.
-        > java에서 최상위인 java.lang.Object 클래스를 상속하는 모든 클래스들을 말한다. new로 인해 상성하는 것들은 메모리 영역 중 Heap 영역에 생성되고 Garbage Collector가 해제한다.
+        > java에서 최상위인 java.lang.Object 클래스를 상속하는 모든 클래스들을 말한다. 
+        > new로 인해 상성하는 것들은 메모리 영역 중 Heap 영역에 생성되고 Garbage Collector가 해제한다.
         > 클래스 타입, 인터페이스 타입, 배열 타입, 열거 타입.
         > 빈 객체를 의미하는 Null이 존재.
         > 문법상으로는 에러가 없지만 실행시켰을 때 에러가 나는 런타임 에러가 발생한다.
-        > Heap 메모리에 생성된 인스턴스는 메소드나 각종 인터페이스에서 접근하기 위해 JVM의 Stack 영역에 존재하는 Frame의 일종인 포인터 참조값을 가지고 있어 이를 통해 인스턴스를 핸들링한다.
-            > String Class는 참조형에 속하지만 기본형처럼 사용하며 불변하는 객체이다. 값을 변경해주는 메소드가 존재하지만 이 또한 새로운 객체를 만들어 내는 것이기 때문에 기본형처럼 ==연산자를 통해 비교할 수 없고 .equals 메소드를 사용해야 한다.
+        > Heap 메모리에 생성된 인스턴스는 메소드나 각종 인터페이스에서 접근하기 위해 
+        > JVM의 Stack 영역에 존재하는 Frame의 일종인 포인터 참조값을 가지고 있어 이를 통해 인스턴스를 핸들링한다.
+        > ```
+        >    > String Class는 참조형에 속하지만 기본형처럼 사용하며 불변하는 객체이다. 값을 변경해주는 메소드가 존재하지만 이 또한 새로운 객체를 만들어 내는 것이기 때문에 기본형처럼 ==연산자를 통해 비교할 수 없고 .equals 메소드를 사용해야 한다.
 - git/github
     - 충돌conflict
-    > 한 코드 파일의 같은 부분을 두 브랜치가 동시에 수정, 커밋한 상황.
-    > 이후 두 브랜치를 merge 하면 충돌상황 발생.
+    > - 한 코드 파일의 같은 부분을 두 브랜치가 동시에 수정, 커밋한 상황.
+    > - 이후 두 브랜치를 merge 하면 충돌상황 발생.
     ```
     <<<<<<<<<< HEAD
     헤드의 코드
@@ -57,14 +70,15 @@
     어나더의 코드
     >>>>>>>>>> another
     ```
-    > 메세지를 지우고 다시 한 번 커밋. (컨플릭트를 해결)
+    > - 메세지를 지우고 다시 한 번 커밋. (컨플릭트를 해결)
     - 저장소 복제fork
-        > 브랜치는 하나의 원본저장소에서 분기를 나누는 것
-            - 하나의 원본저장소에서 코드 커밋 이력을 편하게 볼 수 있지만 많은 수의 브랜치가 생기면 관리하기 힘들어진다.
-            - 작은 규모일 경우 브랜치.
-        > 포크는 여러 원격저장소를 만들어 분기를 나누는 것
-            - 원본 저장소와 별개의 저장소가 생기므로 마음껏 코드를 수정할 수 있지만 원본 저장소의 이력을 보려면 따로 주소를 추가해줘야하는 번거로움이 생긴다.
-            - 대규모 인원이 참여하는 오픈소스 같은 경우 포크.
+        > `브랜치는 하나의 원본저장소에서 분기를 나누는 것`
+        >    - 하나의 원본저장소에서 코드 커밋 이력을 편하게 볼 수 있지만 많은 수의 브랜치가 생기면 관리하기 힘들어진다.
+        >    - 작은 규모일 경우 브랜치.
+        >   
+        > `포크는 여러 원격저장소를 만들어 분기를 나누는 것`
+        >    - 원본 저장소와 별개의 저장소가 생기므로 마음껏 코드를 수정할 수 있지만 원본 저장소의 이력을 보려면 따로 주소를 추가해줘야하는 번거로움이 생긴다.
+        >    - 대규모 인원이 참여하는 오픈소스 같은 경우 포크.
         - 협업 중이라면 직접 머지하지 말고 pull request를 통해 할 것.
         - 오픈소스에 pr을 보낼 때는 기여 안내문서contribution guideline을 참고해야 한다. ex.[react의 기여 안내문서](https://reactjs.org/docs/how-to-contribute.html)
 
