--- a/202108/20210831.md
+++ b/202108/20210831.md
@@ -1,19 +1,16 @@
-✅ 어제 계획한 것의 달성도
------------------------------------------------------
+# ✅ 어제 계획한 것의 달성도
 - [ ] ~~자바스크립트 책 1장 읽으면서 실습하기~~ 2장까지 읽으면서 실습
 - [ ] 프로그래머스 문제 해결
 - [X] 업무 시간엔 업무에 집중!
 
-🔥 일주일 계획 진행도 ️◽️◾️◽️◽️◽️◽️◽️️
------------------------------------------------------
+# 🔥 일주일 계획 진행도 ️◽️◾️◽️◽️◽️◽️◽️️
 - [X] 하루에 한 번 우아한 테크 시청 2/7
-- [ ] [Java] 파트 공부 11/15
-- [ ] it 어휘 정리 2/11
+- [X] [Java] 파트 공부 12/15
+- [X] it 어휘 정리 3/11
 
 
-💬 배운내용
------------------------------------------------------
-- zxing lib `QR코드 라이브러리`
+# 💬 배운내용
+## zxing lib `QR코드 라이브러리`
 ```xml
 <dependency>
     <groupId>com.google.zxing</groupId>
@@ -36,12 +33,10 @@ import com.google.zxing.common.BitMatrix;
 import com.google.zxing.qrcode.QRCodeWriter;
 
 public class TestQRCode {
-
-    @Test
+    
     public void test() throws Exception {
         QRCodeWriter qrCodeWriter = new QRCodeWriter();
         String text = "http://iwastore.obigo.com/mobile";
-        //text = new String(text.getBytes("UTF-8"), "ISO-8859-1");
         BitMatrix bitMatrix = qrCodeWriter.encode(text, BarcodeFormat.QR_CODE, 300, 300);
         MatrixToImageWriter.writeToFile(bitMatrix, "png", new File("qrcode.png"));
     }
@@ -49,11 +44,11 @@ public class TestQRCode {
 }
 ```
 
-- stream APi 공부
+## stream APi 공부
 
 ###colloection vs stream
 
-`colloection` : 미리 게산된 데이터. 외부 반복을 통해 사용자가 직접 반복작업을 거침.<br>
+`colloection` : 미리 계산된 데이터. 외부 반복을 통해 사용자가 직접 반복작업을 거침.<br>
 `stream` : 요청할 때 요소를 계산. 내부 반복을 사용하므로 추출 요소만 선언.
 
 
@@ -79,7 +74,7 @@ public class TestQRCode {
 집계		count() //Long, max(), min(), average(), sum(), reduce()
 조사		findFirst(), findAny() //Optional 반환
 ```
-*Optional 클래스*<br>
+**Optional 클래스*<br>
 값의 존재나 여부를 표현하는 컨테이너 class<br>
 null로 인한 버그 막기<br>
 .isPresent() : Optional이 값을 포함할때 True 반환
@@ -88,18 +83,20 @@ null로 인한 버그 막기<br>
 <br>
 [참고](https://velog.io/@foeverna/Java-513-%EC%8A%A4%ED%8A%B8%EB%A6%BC-API-Stream-API)
 
-- 우아한 테크
-[아마찌의 ORM vs Sql Mapper vs JDBC]() 
+## 우아한 테크
+[아마찌의 ORM vs Sql Mapper vs JDBC](https://www.youtube.com/watch?v=VTqqZSuSdOk) 
 
-⏪ 회고
------------------------------------------------------
-- 
-
-
-🔰 내일 계획
------------------------------------------------------
+# ⏪ 회고
+- 밖에서 공부하는 건 집중 잘 되고 정말 좋은데.. 용돈이 순식간에 빠져서 일주일 내내는 힘들 것 같다. 기분전환용으로 종종 가는 것은 괜찮을 듯.
+- 확실히 책이 구어체에 반복적이고 세세하게 설명해주다보니 읽는 속도가 빠르다! 아마 메모하지 않고 읽으면 2장을 하루만에 읽을 수도 있을 것 같다.. 근데 정말 책과 책의 난이도 차이가 엄청난 듯. 어려운 책은 정말 한문장 한문장 읽기가 버거운데 독서에 속도감이 있으니 읽는게 정말 즐겁다. 책은 아무튼 재미가 있어야 한다는 모작가님의 명언이 떠오른다.
+- 코딩테스트도 해보고 실제 업무도 하며 느낀건데 확실히 기초가.. 없다! 😂 자바 기초책을 골라서 다시 한 번 봐야할듯.. 그래도 처음 배웠을 때보단 쉽지 않을까?
 
 
-🔥 일주일 계획
------------------------------------------------------
+# 🔰 내일 계획
+- [ ] 남은 2장까지 읽으면서 실습
+- [ ] 고모랑 상담
 
+# 🔥 일주일 계획
+- [ ] 하루에 한 번 우아한 테크 시청 2/7
+- [ ] [Java] 파트 공부 12/15
+- [ ] it 어휘 정리 3/11
