--- a/202109/20210901.md
+++ b/202109/20210901.md
@@ -1,9 +1,9 @@
 # ✅ 어제 계획한 것의 달성도
 - [ ] 남은 2장까지 읽으면서 실습
-- [ ] 고모랑 상담
+- [X] 고모랑 상담
 
 # 🔥 일주일 계획 진행도 ️◽️◾️️◾️◽️◽️◽️◽️️
-- [ ] 하루에 한 번 우아한 테크 시청 2/7
+- [X] 하루에 한 번 우아한 테크 시청 3/7
 - [ ] [Java] 파트 공부 12/15
 - [ ] it 어휘 정리 3/11
 
@@ -90,10 +90,14 @@
 
 # ⏪ 회고
 - 차장님이 갑작스럽게 트랜잭션이 뭔지 물어보셨는데, 어렴풋이 기억하고 있던걸 대답한터라 합격목걸이는 동기가 가져갔다. 그야 항상 기초가 부족하다고 이야기 하지만 이렇게 확인사살 받으니 정말 기분이 좋지 않았다... 그렇다고 풀죽고 있을 수만은 없다. 남들보다 더 많이 공부해야겠다. 1년 뒤엔 자바에 대한 질문은 모두 마스터하는 것을 목표로!
+- 현재 내가 가진 보험의 상태와 앞으로의 대비에 대해 컨설턴트인 고모와 상담했다. 역시 모든 것은 전문가와 함께 이야기해야 한다는게 피부에 와닿을 정도로 현재의 내 상태와 앞으로 어떤식으로 돈을 관리하고 써야할지 계획할 수 있었다! 안그래도 한 번 쯤은 고모와 이야기 나누고 싶었는데 2개월 후 보험료가 상승한다는 소릴 듣고 충동적으로 만나고자 결정한 것이 좋은 계기가 되지 않았나 싶었다. 부양가족이 없는 만큼 나도 보살핌 받을 생각은 없으니까 지금부터 노후와 미래를 대비해 나가야지. 이젠 아무 생각없이 살지 않을 것이다!
+
 
 # 🔰 내일 계획
-- [ ] 자바스크립트 스터디
-- [ ] 추가중
+- [ ] 자바스크립트 스터디 참여하고 공부한 것 정리하기
+- [ ] 업무는 절대 소홀히 하지 않기
 
 # 🔥 일주일 계획
-- 수정중
+- [ ] 하루에 한 번 우아한 테크 시청 3/7
+- [ ] [Java] 파트 공부 12/15
+- [ ] it 어휘 정리 3/11
