--- a/202109/20210901.md
+++ b/202109/20210901.md
@@ -1,5 +1,5 @@
 # ✅ 어제 계획한 것의 달성도
-- [ ] 남은 2장까지 읽으면서 실습
+- [] 남은 2장까지 읽으면서 실습
 - [X] 고모랑 상담
 
 # 🔥 일주일 계획 진행도 ️◽️◾️️◾️◽️◽️◽️◽️️
@@ -95,7 +95,8 @@
 
 # 🔰 내일 계획
 - [ ] 자바스크립트 스터디 참여하고 공부한 것 정리하기
-- [ ] 업무는 절대 소홀히 하지 않기
+- [ ] 프로그래머스 피드백 받고 고쳐보기
+- [ ] 업무는 절대 소홀히 하지 않기  
 
 # 🔥 일주일 계획
 - [ ] 하루에 한 번 우아한 테크 시청 3/7
