--- a/202109/20210902.md
+++ b/202109/20210902.md
@@ -1,5 +1,5 @@
 # ✅ 어제 계획한 것의 달성도
-- [ ] 자바스크립트 스터디 참여하고 공부한 것 정리하기
+- [X] 자바스크립트 스터디 참여하고 공부한 것 정리하기
 - [ ] 프로그래머스 피드백 받고 고쳐보기
 - [X] 업무는 절대 소홀히 하지 않기
 
@@ -46,18 +46,30 @@
 - getMessage() : 한줄로 요약된 메세지를 String 으로 반환
 - getStackTrace() : printstackTrace를 보완, StackTraceElement[]라는 문자열 배열로 변경해서 출력하고 저장
 
-## [git branch 전략]()
+## [git branch 전략](https://www.youtube.com/watch?v=jeaf8OXYO1g)
+- git-flow
+  - 2개의 메인 브런치(main, dev)와 3개의 보조 브런치(feature, release, hotfix). 
+  - 주기적으로 배포를 하는 서비스에 적합. 가장 유명한 전략인만큼 많은 ide가 지원.
+- github-flow
+  - 제품이 배포되는 main 브런치만 존재. 분류 없이 자유롭게 브런치 생성, PR을 이용한 토의를 통해 푸시 및 배포.
+  - 브런치 전략이 단순하여 git 입문자에게도 유용. CI, CD가 자연스럽게 이루어짐.
+  
 
 # ⏪ 회고
-- 오늘 처음으로 외부에 PR을 해봤다! 자바 공부중에 발견한 한글자짜리 오타지만 뭔가 배운걸 실제로 써봤다는 느낌이 좋은 것 같다. 허락받을 줄 알았는데 참여율이 그렇게 높진 않아서 바로 merge되었다. 아쉽당.
+- 오늘 처음으로 외부에 PR을 해봤다! 한글자짜리 오타를 수정한 것 뿐이지만 뭔가 배운걸 실제로 써봤다는 느낌이 좋은 것 같다.
 - 요새 jazz음악이 정말 좋은 것 같다. 특히 영화 소울에서 정말 감명깊게 들었는데 그 이후로 어떻게 알았는지 알고리즘이 마구마구 추천해줘서 즐겁게 듣고 있다. 특히 아침 출근 길 물길따라 달릴 때 듣는 재즈음악은 최고. 하루를 즐겁게 시작할 수 있는 팁을 얻은 기분이다.
-- 스터디 끝나고 또 쓸 것 !
+- 역시 책을 읽는 것과 소화하는 것은 전혀 다른 일임을 새삼 느꼈다. 이해한 줄 알았는데 거의 폰이해 수준이었고. 스터디를 통해 개념을 다시 공부하는 것이 정말 도움이 되는 것 같다. 하지만 책 읽으면서 적은 노트는 그냥 정리용인 것 같고 이야기가 나온 것처럼 책을 읽을 때 궁금한 것, 대화할만한 것을 메모해두고 목표를 확실히 세우는 것이 스터디의 효과를 더 증가시킬 수 있을 것 같다.
+- eol 수정했더니 주석을 적은 것도 안되는 것 같다.. 중간에 잘 안되서 푸시를 연달아 세번이나.. 다음 푸시는 코드를 좀 수정해보고 하는 것으로.
 
 
 # 🔰 내일 계획
-- [ ] 정하는 중
+- [ ] 금요일의 업무 불태우기
+- [ ] 금요일 저녁 약속!
+- [ ] 잊지말고 til 등록할 것
+- [ ] 프로그래머스 문제 수정하기
 
 # 🔥 일주일 계획
 - [ ] 하루에 한 번 우아한 테크 시청 4/7
 - [ ] [Java] 파트 공부 13/15
 - [ ] it 어휘 정리 4/11
+- [ ] [study] 자바스크립트 읽으며 정리 2/10
