--- a/202109/20210906.md
+++ b/202109/20210906.md
@@ -12,7 +12,7 @@
 - [X] [study] 자바스크립트 읽으며 정리 2/10
 
 # 💬 배운내용
-- [얄코쌤 특강 정리해서 머리에 넣기 대작전](https://www.notion.so/75461b6c374f48de856818042181e77a)
+- [얄코쌤 특강 정리해서 머리에 넣기 대작전](https://subsequent-dog-eab.notion.site/75461b6c374f48de856818042181e77a)
 - [자바스크립트 정리](https://github.com/leeokdk/BOOKMON_stomach/blob/main/js_coding%2Btech/chap_3.md)
 
 # ⏪ 회고
