--- a/202109/20210907.md
+++ b/202109/20210907.md
@@ -1,6 +1,6 @@
 # ✅ 어제 계획한 것의 달성도
 - [X] 서비스 데스크 코드 한번 만져보기
-- [ ] 자바스크립트 3챕 정리완료
+- [X] 자바스크립트 3챕 정리완료
 
 # 🔥 일주일 계획 진행도
 - [x] 하루에 한 번 얄팍한 코딩사전 시청 2/7
@@ -8,7 +8,7 @@
 - [ ] sql 자격검정 실전문제 훑어보기
 - [ ] [Database] 파트 공부 1/9
 - [ ] it 어휘 정리 4/11
-- [ ] [study] 자바스크립트 읽으며 정리 2/10
+- [X] [study] 자바스크립트 읽으며 정리 3/10
 
 # 💬 배운내용
 - [얄코쌤 특강 정리해서 머리에 넣기 대작전](https://subsequent-dog-eab.notion.site/75461b6c374f48de856818042181e77a)
@@ -34,14 +34,21 @@
     > Read Timeout의 경우 클라이언트는 그 때를 오류로 인지하고 서버는 계속 요청을 수행하고 있으므로 요청을 성공으로 인지하여 서로 싱크가 맞지 않아 문제가 발생할 수 있다.
 
 
-
 # ⏪ 회고
 - 오늘은 절대 나 혼자서는 해결하지 못할 것 같았던 jdbc 드라이버 오류를 파악했다! 하루종일 원인 분석해서 선임에게 알려드리는데 초큼 뿌듯했다. 결론을 내릴 때엔 역시 대리님의 도움을 받았지만 그래도 이제 통신이란게 무엇인지 가닥을 조금은 잡은 느낌이다. 확실히 어렵지만 백엔드는 배울수록 재미있는 것 같다. 이사님이 주신 숙제도 얼추 했다. 이것저것 끝내서 오늘은 조금 여유 있었던 듯. 
-- 
+- 카페에서 공부하는 건 정말 좋긴한데 너무 남용하면 힘들 것 같다. 적당히 치트키로 사용하는 것으로. 진짜 한참 공부할 때 커피니를 요긴하게 썼었는데 아쉽다.
+- 얄코는 어차피 노션에 정리하면서 정주행을 하니 아침엔 정리된 데이터베이스를 보고 점심에 어휘정리를 해야겠다. 오후에 다 하려고 하니 시간이 너무 없는 듯.
+- 너무 졸리다.. 체력은 언제 키운담.
 
 # 🔰 내일 계획
-- [ ] 미정쓰
+- [ ] 서비스 데스크 보수 후 보고
+- [ ] 백엔드 로드맵으로 한달 계획표 만들기
+- [ ] 자바스크립트 4챕 정리
 
 # 🔥 일주일 계획
-- [ ] 미정
-
+- [ ] 하루에 한 번 얄팍한 코딩사전 시청 2/7
+- [ ] 프로그래머스 문제 풀기
+- [ ] sql 자격검정 실전문제 훑어보기
+- [ ] [Database] 파트 공부 1/9
+- [ ] it 어휘 정리 4/11
+- [ ] [study] 자바스크립트 읽으며 정리 3/10
