--- a/202109/20210908.md
+++ b/202109/20210908.md
@@ -9,10 +9,9 @@
 - [ ] sql 자격검정 실전문제 훑어보기
 - [x] [Database] 파트 공부 2/9
 - [x] it 어휘 정리 5/11
-- [ ] [study] 자바스크립트 읽으며 정리 3/10
+- [x] [study] 자바스크립트 읽으며 정리 3/10
 
 # 💬 배운내용
-- [얄코쌤 특강 정리해서 머리에 넣기 대작전](https://subsequent-dog-eab.notion.site/75461b6c374f48de856818042181e77a)
 - [자바스크립트 정리](https://github.com/leeokdk/BOOKMON_stomach/blob/main/js_coding%2Btech/chap_3.md)
 - [SQL JOIN](https://github.com/gyoogle/tech-interview-for-developer/blob/master/Computer%20Science/Database/%5BDatabase%20SQL%5D%20JOIN.md) 
     - INNER JOIN 교집합
@@ -23,16 +22,24 @@
     - SELF JOIN ~~나는 나와 연애한다!~~ 자신의 데이터 변형용 
 - [어휘 정리](https://github.com/leeokdk/BOOKMON_stomach/blob/main/it_english/it_voca.md)
 
+
 # ⏪ 회고
-- 회고중
+- 오늘은 예상치 못한 일정이 조금 많았다. 항상 어느 정도의 변수를 생각해두고 생활을 해야될 것 같다. 그래도 확실히 아침과 점심에 해야할 일을 정해두었더니 더 나은 것 같다. 틈틈이 영어단어 외우듯 생각하면 좋을 것 같다.
+- 개발자 로드맵을 제대로 읽어보니 정말 양이 어마무시하다는 것을 알았다. 선배님이 선택과 집중을 강조한 이유가 새삼 와 닿는 것 같았다. 진짜 열심히 하지 않으면 안되겠단 생각이 들었다. 
+- 어제 진짜 리얼하게 꾼 꿈 때문에 죽음에 대해 간접경험을 했더니 어차피 죽음을 피할 수 없을 바에야 스스로가 원하는 투자를 하고 하고 싶은거 하면서 살아가야겠다는 기묘한 교훈을 얻었다. 하지만 너무 리얼해서 다시는 꾸고 싶지 않다..  
+- 내일은 스터디! 이번 개념은 이해하지 못한게 많아서 잘 참여할 수 있을지 모르겠다..
 
 # 🔰 내일 계획
-- [ ] 미정
+- [ ] 업무 마무리 후 보고
+- [ ] 백엔드 로드맵으로 한달 계획표 만들기
+- [ ] 자바스크립트 4챕 끝까지!
+- [ ] 8시 스터디 참여
 
 # 🔥 일주일 계획
 - [ ] 하루에 한 번 얄팍한 코딩사전 시청 2/7
 - [ ] 프로그래머스 문제 풀기
 - [ ] sql 자격검정 실전문제 훑어보기
-- [ ] [Database] 파트 공부 1/9
-- [ ] it 어휘 정리 4/11
+- [ ] [Database] 파트 공부 2/9
+- [ ] it 어휘 정리 5/11
 - [ ] [study] 자바스크립트 읽으며 정리 3/10
+
