--- a/202109/20210909.md
+++ b/202109/20210909.md
@@ -2,10 +2,10 @@
 - [X] 업무 마무리 후 보고
 - [ ] 백엔드 로드맵으로 한달 계획표 만들기
 - [x] 자바스크립트 4챕 끝까지!
-- [ ] 8시 스터디 참여
+- [x] 8시 스터디 참여
 
 # 🔥 일주일 계획 진행도
-- [ ] 하루에 한 번 얄팍한 코딩사전 시청 2/7
+- [x] 하루에 한 번 얄팍한 코딩사전 시청 3/7
 - [ ] 프로그래머스 문제 풀기
 - [ ] sql 자격검정 실전문제 훑어보기
 - [X] [Database] 파트 공부 3/9
@@ -22,17 +22,27 @@
     - SQL 서버 오류 발생 시, 해당하는 에러 메세지 감추기 (view를 활용한 접근 권환 높이기)
     - statement 대신 preparestatement 사용하기 (특수문자 자동 escaping)
 - [어휘 정리](https://github.com/leeokdk/BOOKMON_stomach/blob/main/it_english/it_voca.md)
-- [자바스크립트 정리](https://github.com/leeokdk/BOOKMON_stomach/blob/main/js_coding%2Btech/chap_3.md)
+- [자바스크립트 스터디](https://github.com/leeokdk/BOOKMON_stomach/blob/main/js_coding%2Btech/study_20210909.md)
+- [얄코쌤 특강 정리해서 머리에 넣기 대작전](https://subsequent-dog-eab.notion.site/75461b6c374f48de856818042181e77a)
 
 
 # ⏪ 회고
 - 공부복이 터졌다. 회사에서도 업무를 빨리 터득하기 위해 이사님이 직접 스터디 팀을 꾸려주셨다. 시스템을 구축하는 전반적인 부분을 터득하고 하루 빨리 프로젝트에 투입되는게 목표다. 내 공부와 병행하려면 너무 이 쪽에 치우치지 말아야할텐데 진짜 시킨 일만 잘 했으면 좋겠다.
 - 내일은 백신때문에 조기 퇴근! 다들 점심되자마자 가던데.. 나도 그냥 더 일찍 예약할걸.. 🙄
+- 오늘도 폭풍 스터디. 이야기를 나누다보면 정말 시간 가는 줄 모르겠다. 하지만 확실히 너무 오래 걸리는 것 같긴 하다. 조금씩 시간을 줄여서 다같이 효율적으로 공부하면 정말 좋을 것 같다. 하지만 정말 책은 잘 고른 것 같다! 읽지 않았으면 얻지 못했을 지식이 나날이 상승중. 이번 달에 끝내는 걸 목표로 열심히 읽어봐야지. 그리고 다음 책은 꼭 현물로 사자.. 
 
 
 # 🔰 내일 계획
-- [ ] 4시 백신 접종
+- [ ] 시스템 코드 순회
+- [ ] 4시 백신 접종 & 지원금 신청
+- [ ] 백엔드 로드맵으로 한달 계획표 만들기
+- [ ] sql 자격검정 실전문제 훑어보기
+- [ ] 부스트코스 살펴보고 강의 들어보기
 
 # 🔥 일주일 계획
-
+- [ ] 하루에 한 번 얄팍한 코딩사전 시청 3/7
+- [ ] 프로그래머스 문제 풀기
+- [ ] [Database] 파트 공부 3/9
+- [ ] it 어휘 정리 8/11
+- [ ] [study] 자바스크립트 읽으며 정리 4/10
 
