--- a/202109/20210919.md
+++ b/202109/20210919.md
@@ -1,5 +1,5 @@
 ## ✅ 어제 계획한 것의 달성도
-- [ ] 코딩의기술 챕터6 마무리_찐_찐
+- [x] 코딩의기술 챕터6 마무리_찐_찐
 - [ ] 코딩의기술 챕터7 tip 32~34
 - [ ] sqld chap.1
 
@@ -8,10 +8,12 @@
 - [ ] 프로그래머스 문제 풀기
 - [ ] 코딩의 기술 읽으며 정리 5,6챕터
 - [x] 부스트코스 살펴보고 강의 들어보기
-- [ ] 노션, 링크드인, 로켓펀치 이력서 정돈
+- [x] 노션, 링크드인, 로켓펀치 이력서 정돈
 
 
 ## 💬 배운내용
+- [javascript](https://github.com/leeokdk/BOOKMON_stomach/blob/main/js_coding+tech/chap_6.md)
+- 
 
 
 ## ⏪ 회고
