--- a/202109/20210919.md
+++ b/202109/20210919.md
@@ -6,14 +6,23 @@
 ## 🔥 일주일 계획 진행도
 - [x] 차근차근 로드맵 밟기 1단계
 - [ ] 프로그래머스 문제 풀기
-- [ ] 코딩의 기술 읽으며 정리 5,6챕터
+- [x] 코딩의 기술 읽으며 정리 5,6챕터
 - [x] 부스트코스 살펴보고 강의 들어보기
 - [x] 노션, 링크드인, 로켓펀치 이력서 정돈
 
 
 ## 💬 배운내용
 - [javascript](https://github.com/leeokdk/BOOKMON_stomach/blob/main/js_coding+tech/chap_6.md)
-- 
+- algorithms by scratch
+input => algorithms => output
+1. 'hello, world' => say ~ => scratch said 'hello, world'
+2. 'what's your name?' => ask ~ and wait => answer
+3. 1) 'hello' answer => join ~ => 'hello, David'
+4. 'hello, David' => say ~ => scratch said 'hello, David'
+
+**추상화**
+> scratch가 변수만큼 기침을 하는 함수를 만들고 외부에서 사용.<br>
+> 사용하는 이는 기침 함수가 어떻게 구현되었는지 알 수도 알 필요도 없다.
 
 
 ## ⏪ 회고
@@ -21,11 +30,13 @@
 
 
 ## 🔰 내일 계획
-
+- [ ] 코딩의기술 챕터7 tip 32~34
+- [ ] sqld chap.1 study
+- [ ] 터미널 사용방법
 
 ## 🔥 일주일 계획
-- [x] 차근차근 로드맵 밟기 1단계
+- [ ] 차근차근 로드맵 밟기 2단계
 - [ ] 프로그래머스 문제 풀기
-- [ ] 코딩의 기술 읽으며 정리 5,6챕터
-- [x] 부스트코스 살펴보고 강의 들어보기
-- [ ] 노션, 링크드인, 로켓펀치 이력서 정돈
+- [ ] 코딩의 기술 읽으며 정리 7,8챕터
+- [ ] 부스트코스 강의 chap.2 C
+- [ ] sqld study start
