--- a/202109/20210919.md
+++ b/202109/20210919.md
@@ -26,7 +26,7 @@ input => algorithms => output
 
 
 ## ⏪ 회고
-
+- 정말 시간은 빠르게 가는 것 같다. 어떻게 쓰냐에 따라 천차만별인게 시간인듯. 벌써 일요일 끝자락이라니.. 내일하고 내일모레는 정말 틈틈이 공부하지 않으면 아무것도 못할지도 모르겠다. 열심히!
 
 
 ## 🔰 내일 계획
