--- a/202109/20210927.md
+++ b/202109/20210927.md
@@ -1,8 +1,8 @@
 ## ✅ 어제 계획한 것의 달성도
-- [ ] 코딩의기술 챕터9 tip 43~46
+- [X] 코딩의기술 챕터9 tip 43~
 - [ ] sqld chap.1 풀어보기
 - [ ] 터미널 사용방법
-- [ ] 부스트코스 강의 듣기 시작
+- [X] 부스트코스 강의 듣기 시작
 
 ## 🔥 일주일 계획 진행도
 - [ ] 차근차근 로드맵 밟기 2단계
@@ -13,15 +13,29 @@
 
 
 ## 💬 배운내용
+- [자바스크립트 코딩의 기술 tip.43](https://github.com/leeokdk/BOOKMON_stomach/blob/main/js_coding%2Btech/chap_9.md)
+- 모두를 위한 컴퓨터과학
+```c
+#include <stdio.h> //printf 함수에 접근
 
-
+int main(void)
+{
+    printf("hello, boostcourse\n");
+}
+```
+터미널 명령어
+> clang -o hello boost.c //clang 컴파일 -o 옵션(생략가능) hello 머신코드이름 <br>
+> ./hello //실행 <br> 
 
 ## ⏪ 회고
 - 지난 주는 정말 일주일 내내 푹 쉬었다. 솔직히 뭘 했는지도 잘 기억나지 않는 것 같다.. 지나간건 지나간거고 다시 열심히 달려야할 듯!
-
+- 한참 쉬니 마음 다잡는게 도로 힘들어졌다. 루틴을 만든다는게 정말 중요한 것 같은데 매번 핑계에 3주 지속하는 것도 힘든 듯.. 요행을 바라지 말고 조금씩이라도 꾸준히 하자. 
 
 ## 🔰 내일 계획
-- [ ] 계획중
+- [ ] 코딩의기술 챕터9 tip 44~45
+- [ ] sqld chap.1 풀어보기
+- [ ] 터미널 사용방법
+- [ ] 부스트코스 c언어 2)문자열
 
 ## 🔥 일주일 계획
 - [ ] 차근차근 로드맵 밟기 2단계
