--- a/202109/20210928.md
+++ b/202109/20210928.md
@@ -1,11 +1,11 @@
 ## ✅ 어제 계획한 것의 달성도
-- [ ] 코딩의기술 챕터9 tip 44~45
+- [x] 코딩의기술 챕터9 tip 44~45
 - [ ] sqld chap.1 풀어보기
-- [ ] 터미널 사용방법
-- [ ] 부스트코스 c언어 2)문자열
+- [ ] ~~터미널 사용방법~~ 대신 인프런의 스프링, 생활코딩 습득 예정
+- [x] 부스트코스 c언어 2)문자열
 
 ## 🔥 일주일 계획 진행도
-- [ ] 차근차근 로드맵 밟기 2단계
+- [ ] ~~차근차근 로드맵 밟기 2단계~~
 - [ ] 프로그래머스 문제 풀기
 - [ ] 코딩의 기술 읽으며 정리 9,10챕터
 - [ ] 부스트코스 강의 chap.2 C
@@ -15,21 +15,43 @@
 ## 💬 배운내용
 - [JAVA 17 LTS 출시](https://www.oracle.com/kr/news/announcement/oracle-releases-java-17-2021-09-14/)
 - [JAVA 8(LTS) to JAVA 11(LTS) Migration](https://oingdaddy.tistory.com/39)
+- [코딩의 기술 9챕 정리](https://github.com/leeokdk/BOOKMON_stomach/commit/906c44b41b66c86850a0cff6ffb017a1185f35e4)
+- 부스트코스 c언어 2)문자열
+
+```c
+#include <cs50.h>
+#include <stdio.h>
+
+int main(void)
+{
+    string answer = get_string("What's your favorite animal?\n");
+    printf("I like %s\n", answer);
+}
+```
+
+> $clang -o string string.c //오류<br>
+> $clang -o string string.c -lcs50 혹은
+> $make string
+
 
 ## ⏪ 회고
-- 회고중
-- 계획 대폭 수정예정
+- 코딩 강의를 자주 검색해서 그런지 인터넷 강의 광고에 자주 노출되는 편인데, 아무래도 한두푼의 수준이 아니라서 꼼꼼히 검색해보곤 한다. 이번에 찾은건 앞으로 읽을 리팩토링, 클린코딩의 책을 완독하기 위한 한달 한권 챌린지 강의였는데,
+생각보다 굉장히 강의료가 비싸서 놀랬다. 그만큼 강의의 질이 높은건가 싶지만 실시간 강의도 아니고 다른 강의에 대한 혹평이 종종 있어서 결국 책은 스스로 읽기로 했다. 
+그리고 대체로 가격대비 만족할만한 온라인 강의는 아주 극소수인 듯 하여 기초를 쌓을 때 까진 유투브와 책을 위주로 보기로 했다. 영 불안하면 인프런을 결제하기로.
+- 이번에 아이디어가 참신한 플로깅 어플을 받고 써봤다. 디자인도 나쁘지 않고 기능도 나름 있었지만 생각했던 것만큼 확 와닿는게 없어서 바로 삭제. 하고 있는 사람도 아무도 없는 것 같았다. 아무리 잘 만들어도 사람들이 사용하지 않으면 아무 의미도 없는 것 같아서 안타까웠다. 
+사용자들끼리 교류할 수 있는 게시판이 있어서 커뮤니케이션을 지원한다던가(심지어 쓰레기 줍는 인증샷도 찍는 기능이 있었다! 이걸 활용했으면..) 이전에 있었던
+온라인에서 기른 나무로 사막에 나무심기, 농사게임에서 목표 달성하면 실제로 농작물 주기 처럼 플로깅에 국한된게 아닌 더 나아간 다양한 기능을 연결시킬 수 있지 않았을까, 정말 아쉽다.
+- 공부에 대한 회고를 해야하는데 항상 삼천포로.. 부끄럽게도 해체 할당을 완전 잊어버려서 😅 다시 보고 또 정리했다.. 이 짓을 몇 번 더 하면 외울 수 있지 않을까..!
 
 
 ## 🔰 내일 계획
-- [ ] 코딩의기술 챕터9 tip 44~45
+- [ ] 코딩의기술 챕터9 tip 46 ~ 챕터10
 - [ ] sqld chap.1 풀어보기
-- [ ] 터미널 사용방법
-- [ ] 부스트코스 c언어 2)문자열
+- [ ] 부스트코스 c언어 3)조건문과 루프
 
 ## 🔥 일주일 계획
-- [ ] 차근차근 로드맵 밟기 2단계
 - [ ] 프로그래머스 문제 풀기
 - [ ] 코딩의 기술 읽으며 정리 9,10챕터
 - [ ] 부스트코스 강의 chap.2 C
 - [ ] sqld study start
+- [ ] 노션 계획 재정비
