--- a/202109/20210929.md
+++ b/202109/20210929.md
@@ -128,15 +128,17 @@ https://ideone.com/
 
 
 ## ⏪ 회고
-- 회고맨
+- 럴수럴수 이럴수가 어제 집에 가자마자 기절을 했다고 한다.. 
 
 
 ## 🔰 내일 계획
-- [ ] 계획중
+- [ ] 코딩의기술 챕터9 tip 46 ~ 챕터10
+- [ ] 코딩의기술 마지막 스터디 준비 및 참가
+- [ ] 부스트코스 c언어 3)조건문과 루프
 
 ## 🔥 일주일 계획
 - [ ] 프로그래머스 문제 풀기
 - [ ] 코딩의 기술 읽으며 정리 9,10챕터
 - [ ] 부스트코스 강의 chap.2 C
-- [ ] sqld study start
+- [x] sqld study start
 - [ ] 노션 계획 재정비
