--- a/202109/20210930.md
+++ b/202109/20210930.md
@@ -1,11 +1,11 @@
 ## ✅ 어제 계획한 것의 달성도
-- [ ] 코딩의기술 챕터9 tip 46 ~ 챕터10
-- [ ] 코딩의기술 마지막 스터디 준비 및 참가
+- [x] 코딩의기술 챕터9 tip 46 ~ 챕터10
+- [x] 코딩의기술 마지막 스터디 준비 및 참가
 - [ ] 부스트코스 c언어 3)조건문과 루프
 
 ## 🔥 일주일 계획 진행도
 - [ ] 프로그래머스 문제 풀기
-- [ ] 코딩의 기술 읽으며 정리 9,10챕터
+- [x] 코딩의 기술 읽으며 정리 9,10챕터
 - [ ] 부스트코스 강의 chap.2 C
 - [x] sqld study start
 - [ ] 노션 계획 재정비
@@ -191,19 +191,27 @@ enum DevType {
 */
 ```
 
+- [코딩의 기술 완독 및 정리 feat.첫번째 스터디](https://github.com/leeokdk/BOOKMON_stomach/tree/main/js_coding%2Btech)
 
 ## ⏪ 회고
 - 어제는 진짜 몇 시에 잤는지도 모를정도로 꿀잠을 자버렸다. 쓸 말이 많았던 것 같은데 하루 지나서 쓰려니 조금 그렇고.. 그냥 이제부터 본격적으로 프로젝트에 돌입하게 되었단 말이었었었었었따.. 이제 진짜 개발을 조금이나마 체험해볼 수 있을지도 모르겠다. 아무튼 열심히 해봐야지. 힘들다고 절대 공부놓지 않기!
 - 사실 지금도 간당간당하다. 제발 공부좀 해라!
 - 오늘 대전버스가 파업하는 바람에 나의 펄펙트한 노지각 업적이 깨져부렸다. 젠장.. 원만하게 해결되었으면 하는 그런 마음.
+- 하루종일 업무가 전혀 없어서 공부만 했다. 나쁘진 않았는데 앉아서 책만 보려니 너무 졸았던 것 같다.. 내일까지는 이사님도 안계셔서 널널할 듯. 폭풍전야같아서 마냥 기쁘진 않다..
+- 첫스터디 마무리! 정말 스터디를 하니 무려 완독이란걸 해볼 수 있었다. 문제는 이런 저런 핑계로 중후반은 뒷부분을 너무 대강 본 느낌이 없잖아 있단 점.. 나의 태도가 너무 아쉬웠다. 두번째는 똑같은 실수 저지르지 않기. 한달 한권을 달성하려면 2장씩 하는게 맞다. 힘힘!
+- 내일은 간만에 카페에서 공부나 해야지. 
 
 
 ## 🔰 내일 계획
-- [ ] 스터디 끝나고 계획할 것
+- [ ] 코딩의기술 리뷰 작성
+- [ ] stomach read.me update
+- [ ] 코어js 시작하기
+- [ ] sqld ch.2
+- [ ] 부스트코스 c언어 3)조건문과 루프
 
 ## 🔥 일주일 계획
 - [ ] 프로그래머스 문제 풀기
-- [ ] 코딩의 기술 읽으며 정리 9,10챕터
+- [x] 코딩의 기술 읽으며 정리 9,10챕터
 - [ ] 부스트코스 강의 chap.2 C
 - [x] sqld study start
 - [ ] 노션 계획 재정비
