--- a/202110/20211007.md
+++ b/202110/20211007.md
@@ -1,11 +1,11 @@
 ## ✅ 어제 계획한 것의 달성도
-- [ ] 코어 자바스크립트 스터디 준비 및 참여
+- [x] 코어 자바스크립트 스터디 준비 및 참여
 - [X] 업무 우선순위 정리
 - [ ] 부스트코스 강의 챕터3 시작하기
 
 ## 🔥 일주일 계획 진행도
 - [ ] 프로그래머스 문제 풀기
-- [ ] 코어 자바스크립트 챕터1 ~ 2
+- [x] 코어 자바스크립트 챕터1 ~ 2
 - [ ] 부스트코스 강의 chap.3
 - [ ] sqld 챕터2 정리 및 풀기
 - [ ] 노션 계획 재정비
@@ -55,21 +55,25 @@ ex.  Oracle VM vitualbox(무료)와 MS의 Virtual PC, VMware의 VMware Server(30
 - RSA : 비대칭 암호복호화 파일. 로그인, 사용자 계정 정보 변경시 사용.
 
 ### 책 정리
-- [코어자바 1챕터 정리중](https://github.com/leeokdk/BOOKMON_stomach/blob/main/js_core/1_dataType.md)
-- [sqld 1챕터 정리](https://github.com/leeokdk/BOOKMON_stomach/blob/main/sql_dev%2BforExam/chap_1.md)
+- [코어자바 스터디](https://github.com/leeokdk/BOOKMON_stomach/blob/main/js_core/study_20211007.md)
 
 
 ## ⏪ 회고
+- 코어 자바스크립트는 기초개념 및 원리가 부족한 나한테 딱 알맞는 책인 것 같다. 이해가 부족한 부분은 그냥 넘어가지 말고 최대한 정리해서 내 것으로 만들어야겠다.
+- 내가 하고 싶은, 좋아하는 일을 하는게 어렵다는게 아이러니하다. 어찌보면 당연한 것인데, 현실은 녹록치 않다는 이유로 많은 사람들이 포기하려 한다. 어쩌면 포기하면 안되는 것으로 타협하고 있는 것은 아닐까?
+하고싶은 일을 하기에도 모자란 시간이다. 좀 더 노력하자. 그리고 내가 원하는 인생을 살아보자!
 
 
 ## 🔰 내일 계획
-- [ ] 코어 자바스크립트 스터디 준비 및 참여
-- [ ] 업무 우선순위 정리
 - [ ] 부스트코스 강의 챕터3 시작하기
+- [ ] sqld 챕터2 정리 및 풀기
+- [ ] 챕터1 ~ 2장 미정리부분 정리
+- [ ] 노마드 로드맵 구경하기
+- [ ] 금요일 업무 화이팅
 
 ## 🔥 일주일 계획
 - [ ] 프로그래머스 문제 풀기
-- [ ] 코어 자바스크립트 챕터1 ~ 2
+- [x] 코어 자바스크립트 챕터1 ~ 2
 - [ ] 부스트코스 강의 chap.3
 - [ ] sqld 챕터2 정리 및 풀기
 - [ ] 노션 계획 재정비
