--- a/202110/20211008.md
+++ b/202110/20211008.md
@@ -7,9 +7,9 @@
 
 ## 🔥 일주일 계획 진행도
 - [ ] 프로그래머스 문제 풀기
-- [x] 코어 자바스크립트 챕터1 ~ 2
+- [ ] 코어 자바스크립트 챕터3 ~ 4
 - [ ] 부스트코스 강의 chap.3
-- [ ] sqld 챕터2 정리 및 풀기
+- [x] sqld 챕터2 정리 및 풀기
 - [ ] 노션 계획 재정비
 
 
@@ -48,10 +48,19 @@
 ## ⏪ 회고
 - 일이.. 없었다! 다들 출장이라 사무실도 텅텅이라 그냥 하고 싶은 공부를 열심히 했다..
 - 노마드코더 사이트를 둘러봤다. 확실히 흥미롭게 만들어놓은 것 같았다. 일단 초급 강의 중에 무료로 들을 수 있는 강의는 모두 신청해놨다. 그 중에 2주간 챌린지를 신청 할 수 있는 과목도 있었다! 자극도 되고 괜찮을 것 같아서 그것도 신청! 할 수 있으면 너무 똑같게 만들지 말고 살짝 응용하면서 만들어야겠다.
-- 
+- 이번 3일은 꼭 약속 외 남는 시간 잘 활용하기! 
+
 
 ## 🔰 내일 계획
 - [ ] 노션 계획 재정비
+- [ ] 챕터1 ~ 2장 미정리부분 정리
+- [ ] 부스트코스 강의 챕터3 시작하기
+- [ ] sqld 안푼 부분 마무리
+- [ ] 코어 자바스크립트 시작
 
 ## 🔥 일주일 계획
-- [ ]
+- [ ] 프로그래머스 문제 풀기
+- [ ] 코어 자바스크립트 챕터3 ~ 4
+- [ ] 부스트코스 강의 chap.3
+- [x] sqld 챕터2 정리 및 풀기
+- [ ] 노션 계획 재정비
