--- a/202110/20211020.md
+++ b/202110/20211020.md
@@ -1,5 +1,5 @@
 ## ✅ 어제 계획한 것의 달성도
-- [ ] 코어자바 챕터 6챕터 정리
+- [x] 코어자바 챕터 6챕터 정리
 - [x] 매일매일 바닐라자바 강의 및 퀴즈
 - [ ] 코어자바 스터디 준비
 
@@ -47,8 +47,12 @@ nslookup 테스트도메인
   json에서는 사용불가
   https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Trailing_commas
 
+### 코어자바 정리
+- [6챕터 프로토타입](https://github.com/leeokdk/BOOKMON_stomach/blob/main/js_core/6_prototype.md)
+
 ## ⏪ 회고
--
+- 잠깐 한눈 팔면 정말 일주일이 금방 가는 것 같다. 좀 더 깐깐하게 살지 않으면.
+- 업무를 하면서 왠만하면 메모와 정리를 하는 습관을 들이려고 노력중. 아무래도 한 번 익힌걸 바로 습득하긴 힘든데 일러줬던걸 까먹는 것만큼 무능해보이는게 없다. 정리하면서 한 번이라도 더 들여다보는 수 밖에. 요즘들어 든 생각인데 아무리 생소한 것이라도 여러번 보다보면 익숙해진다는 것이다. 뭐든 시간을 들이고 노력하는 것이 가장 빠른 길인 것 같다.
 
 
 ## 🔰 내일 계획
