--- a/202110/20211027.md
+++ b/202110/20211027.md
@@ -1,5 +1,5 @@
 ## ✅ 어제 계획한 것의 달성도
-- [ ] 매일매일 바닐라자바 강의 및 퀴즈
+- [x] 매일매일 바닐라자바 강의 및 퀴즈
 - [ ] sqld 문제 풀기 chap.2-2
 - [ ] 코어자바 스터디 공부 ch.7
 - [ ] 부스트코스
@@ -14,7 +14,7 @@
 
 
 ## 💬 배운내용
-windows 작업 스케줄러 사용하기
+### windows 작업 스케줄러 사용하기
 
 1. bat 파일 생성
 
@@ -47,11 +47,36 @@ forfiles /P C:\WebApp\logs /M *.* /D -60 /C "cmd /c del @file"
 
 [맥북등 유닉스 계열 스케줄러도 존재한다.](https://jdm.kr/blog/2)
 
-## ⏪ 회고
+### 바닐라.js
+```javascript
+function countDown() {
+const nowday = new Date();
+const minus = christ.getTime() - nowday.getTime();
 
+const day = Math.floor(minus / (1000 * 60 * 60 * 24));
+const hours = String(
+Math.floor((minus % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60))
+).padStart(2, "0");
+const minutes = String(
+Math.floor((minus % (1000 * 60 * 60)) / (1000 * 60))
+).padStart(2, "0");
+const seconds = String(Math.floor((minus % (1000 * 60)) / 1000)).padStart(
+2,
+"0"
+);
+```
+- [참고](https://velog.io/@dev-hannahk/js-d-day) 
+
+## ⏪ 회고
+- 연월일 계산하는 법을 완전히 잊어버려서 한참 헤매다 결국 인터넷의 도움을 받았다.. 역시 쓰지 않는 지식은 줄줄 새어나가는 것 같다. 이번 기회에서 되돌아봐서 다행.
+- 하루종일 정신없이 일했는데 그래도 성과가 있어서 다행이다. 오류좀 그만 보고 싶어~~
+- 자바스크립트에 대해 중점적으로 공부하다보니 정말 프론트엔드도 나쁘지 않을 것 같단 생각이 든다. 오늘도 고민 중..
 
 ## 🔰 내일 계획
-
+- [ ] 매일매일 바닐라자바 강의 및 퀴즈
+- [ ] sqld 문제 풀기 chap.2-2
+- [ ] 코어자바 스터디 공부 ch.7
+- [ ] 부스트코스
 
 ## 🔥 일주일 계획
 - [ ] 코어자바 스터디 공부 ch.7
