--- a/202110/20211028.md
+++ b/202110/20211028.md
@@ -1,11 +1,11 @@
 ## ✅ 어제 계획한 것의 달성도
-- [ ] 매일매일 바닐라자바 강의 및 퀴즈
+- [x] 매일매일 바닐라자바 강의 및 퀴즈
 - [ ] sqld 문제 풀기 chap.2-2
-- [ ] 코어자바 스터디 참여 및 정리
+- [x] 코어자바 스터디 참여 및 정리
 - [ ] 부스트코스 5강
 
 ## 🔥 일주일 계획 진행도
-- [ ] 코어자바 스터디 공부 ch.7
+- [x] 코어자바 스터디 공부 ch.7
 - [ ] 바닐라자바 강의 (2/2)
 - [ ] 부스트코스 강의 chap.5
 - [ ] sqld 문제 풀기 chap.2-2
@@ -14,16 +14,23 @@
 
 
 ## 💬 배운내용
-[초보자를 위한 AWS 웹구축](https://tech.cloud.nongshim.co.kr/?s=%EC%B4%88%EB%B3%B4%EC%9E%90%EB%A5%BC+%EC%9C%84%ED%95%9C+AWS+%EC%9B%B9%EA%B5%AC%EC%B6%95)
+- [초보자를 위한 AWS 웹구축](https://tech.cloud.nongshim.co.kr/?s=%EC%B4%88%EB%B3%B4%EC%9E%90%EB%A5%BC+%EC%9C%84%ED%95%9C+AWS+%EC%9B%B9%EA%B5%AC%EC%B6%95)
+- [코어 자바스크립트 마무리](https://github.com/leeokdk/BOOKMON_stomach/tree/main/js_core)
+
 
 ## ⏪ 회고
+- 다음주부터는 정말! 진짜로 바빠질 것 같다. 일상생활이 바쁘니 더더욱 정신이 없는 것 같다. 좀 더 집중하지 않으면.
+- 우테코 완전히 놓고 있었는데 뜨끔했다.. 코테는 봐둬도 나쁠 것 없으니 한 번 해보자! 딱히 부담감도 없어서 나름 재미있을 것 같기도 하다.
+- 나도 나름 열심히 한다고 하는데 아무래도 회사 내에서 제일 실력이 뒤쳐지는 것 같다. 기초가 없어서 더 티나는 것 같다. 업무능력 말고 내 실력을 좀 더 키웠으면.
 
 
 ## 🔰 내일 계획
-
+- [ ] 매일매일 바닐라자바 강의 및 퀴즈
+- [ ] sqld 문제 풀기 chap.2-2
+- [ ] 부스트코스 5강
 
 ## 🔥 일주일 계획
-- [ ] 코어자바 스터디 공부 ch.7
+- [x] 코어자바 스터디 공부 ch.7
 - [ ] 바닐라자바 강의 (2/2)
 - [ ] 부스트코스 강의 chap.5
 - [ ] sqld 문제 풀기 chap.2-2
