--- a/202111/20211103.md
+++ b/202111/20211103.md
@@ -1,11 +1,12 @@
 ## ✅ 어제 계획한 것의 달성도
-- [ ] sqld 문제 풀기 chap.2-2
-- [ ] 부스트코스 5강
+- [x] 프로젝트 시작
+- [x] 부스트코스 5강 2/9
 
 ## 🔥 일주일 계획 진행도
 - [ ] 부스트코스 강의 chap.5
 - [ ] sqld 문제 풀기 chap.2-2
-
+- [ ] 리팩토링 시작하기
+- [ ] 개발자 취업 비밀노트 참고하여 플랜짜기
 
 ## 💬 배운내용
 ### 오프라인 메이븐 빌드 이슈(이클립스)
@@ -30,14 +31,41 @@
 4. 2. 추가이슈 해결
 - 자바탭 installed JREs 에서 jdk 경로를 add 해주고 연결해주기.
 
-### 
+### 부스트코스 
+-  16진수와 메모리
+```c
+#include <stdio.h>
+int main(void)
+{
+    int n = 50;
+    printf("%i\n", *&n); 
+      
+    int *p = &n;
+    printf("%p\n", p); //0x~~~
+    printf("%i\n", *p); //50
+
+    printf("%c%c%c%c\n", 0x43, 0x53, 0x35, 0x30); //CS50
+}
+```
+> 1 ~ F(15). <br>
+> &는 해당 변수의 주소값, *는 주소값을 따라 들어가는 개념. <br>
+> *p는 p변수가 포인터임을 나타냄. int는 p가 int값이 들어있는 포인터라는 뜻.
+
 
 ## ⏪ 회고
 - 항상 기초가 굉장히 많이 부족하다는 것을 느낀다. 덧붙여 내 게으름도.. 반성만 하면 뭐하나 행동을 안하는데.. 
+- 방향을 잘 잡지 못하는 것 같아서 길잡이가 될 도서를 하나 샀다. 신박하게도 노션을 통해 실시간으로 업데이트되고 소통하는 도서?라기엔 애매한 도서라 호기심이 동한 것 같다. 초반부를 읽어나가며 맞말에 고개를 끄덕일 수 밖에 없었다. 너무 무계획으로 살고 있어서 꽤 도움이 되지 않을까 궁예질중.
+- js 챌린지의 결과가 빨리 나와야 쿠폰도 받고 저렴하게 수업도 들을텐데 언제쯤 나올런지.
 
 
 ## 🔰 내일 계획
-
+- [ ] sqld 문제 풀기 0/10
+- [ ] 부스트코스 5강 2/9
+- [ ] 리팩토링 읽기 10page up
+- [ ] 비밀노트 읽기 10page up
 
 ## 🔥 일주일 계획
-
+- [ ] 부스트코스 강의 chap.5
+- [ ] sqld 문제 풀기 chap.2-2
+- [ ] 리팩토링 시작하기
+- [ ] 개발자 취업 비밀노트 참고하여 플랜짜기
