--- a/202111/20211104.md
+++ b/202111/20211104.md
@@ -1,8 +1,8 @@
 ## ✅ 어제 계획한 것의 달성도
 - [ ] sqld 문제 풀기 0/10
-- [ ] 부스트코스 5강 2/9
+- [x] 부스트코스 5강 5/9
 - [ ] 리팩토링 읽기 10page up
-- [ ] 비밀노트 읽기 10page up
+- [x] 비밀노트 읽기 10page up
 
 ## 🔥 일주일 계획 진행도
 - [ ] 부스트코스 강의 chap.5
@@ -10,12 +10,30 @@
 - [ ] 리팩토링 시작하기
 - [ ] 개발자 취업 비밀노트 참고하여 플랜짜기
 
-## 💬 배운내용
 
+## 💬 배운내용
+### CS50
+오늘 배운 것
+> you said strings exist <br> 
+> today we determine that was a lie <br>
+
+### bookmon update
+[책괴물 먹방](https://github.com/leeokdk/BOOKMON_stomach)
+
+
+## ⏪ 회고
+- 어제 샀던 책.. 내용은 그리 많지 않고 대부분 자신에게 맞는 부분을 골라 읽는 식이라 나한테 해당되는 부분만 읽으니 금방 읽었다. 결국 결론은 클론으로 프로젝트의 감을 잡고 내 나름의 프로젝트를 만들어 포트폴리오를 체워야 한단 것이었다. 거기에 알고리즘 및 전공지식도 경력에 맞춰 쌓고.. 원래 알고 있는 내용이지만 좀 더 확신을 갖고 공부를 할 수 있는 것만으로도 위안이 된다. 다음 챌린지도 신청 예정!
+- 오늘 배운 포인터의 개념은 어렴풋이 알고 있었지만 C의 기법과 함께 훨씬 깊게 배우니 그간 무의식적으로 사용하고 있던 여러 개념의 매커니즘이 조금 이해가 갔다. 이렇게 이해의 깊이가 다르니 공부를 하라는 것 같다. 이제야 string이 존재하지 않는다는 걸 알았고.. 
+- 코틀린 스터디를 신청하긴 했는데 일단 될지 되지 않을지도 모르겠지만 솔직히 자신이 하나도 없다.. 요새 좀 자신감이 많이 떨어진 상태이기도 하고, 신청이유에도 적었지만 자바도 제대로 못 다루는데 코틀린~? 라는 생각을 아직도 떨쳐내지 못해서.. 계속 고민하다 요새 너무 공부도 안하고 아예 그냥 담금질해보잔 생각으로 질러보긴 했는데 과연.. 
 
 
 ## 🔰 내일 계획
-
+- [ ] sqld 문제 풀기 0/10
+- [ ] 부스트코스 5강 5/9
+- [ ] 리팩토링 읽기 10page up
 
 ## 🔥 일주일 계획
-
+- [ ] 부스트코스 강의 chap.5
+- [ ] sqld 문제 풀기 chap.2-2
+- [ ] 리팩토링 시작하기
+- [ ] 개발자 취업 비밀노트 참고하여 플랜짜기
