--- a/202111/20211105.md
+++ b/202111/20211105.md
@@ -11,14 +11,19 @@
 
 
 ## 💬 배운내용
+- 생략..
 
 
 ## ⏪ 회고
-
+- 오늘은 외부 모임을 갖느라 저녁시간이 거의 없었다! 자존감이 너무 떨어져 있었던 터라 지인들과 이야기를 나누며 힐링하는 기회가 되었다. 빈말일 수도 있지만, 지금 하는 것도 열심히 잘 하고 있다고 타인이 이야기를 해주는게 많은 위안이 된다. 다시 열심히 달려야겠다! 
 
 
 ## 🔰 내일 계획
-
+- [ ] sqld 문제 풀기 10Q up
+- [ ] 부스트코스 5강 5/9
+- [ ] 리팩토링 읽기 10page up
+- [ ] 플랜용 노션 짜기
+- [ ] 21년도 회고록 초안 짜기
 
 ## 🔥 일주일 계획
 - [ ] 부스트코스 강의 chap.5
