--- a/202111/20211111.md
+++ b/202111/20211111.md
@@ -7,6 +7,7 @@
 - [x] 부스트코스 강의 chap.6 2/9
 - [ ] 코드숨 리액트?스프링? 신청하기
 - [x] 리팩토링 1장 및 스터디
+- [x] 노마드 리액트.js 5챕터까지 1/5
 
 
 ## 💬 배운내용
@@ -119,3 +120,4 @@ int main(void)
 - [ ] 부스트코스 강의 chap.6 2/9
 - [ ] 코드숨 리액트?스프링? 신청하기
 - [x] 리팩토링 1장 및 스터디
+- [ ] 노마드 리액트.js 5챕터까지 1/5
