--- a/202112/20211221.md
+++ b/202112/20211221.md
@@ -1,7 +1,7 @@
 ## ✅ 어제 계획한 것의 달성도
 
-- [ ] 코드숨 과제 피드백 받고 PR 하기
-- [ ] 리팩토링 8챕터 읽기
+- [x] 코드숨 과제 피드백 받고 PR 하기
+- [x] 리팩토링 8챕터 읽기
 - [ ] TDD 책 읽기
 
 ## 🔥 일주일 계획 진행도
@@ -31,10 +31,12 @@
 ## ⏪ 회고
 
 - 나만 힘든게 아니라는 것을 문득 깨닫게 되면 위안을 받는다. 남의 불행을 가지고 너무 한 것 같긴 한데 어쩔 수 없는듯..
+- 하루 종일 일이 많아서 정말 정신없이 일했다. 하나에 집중할 수 있으면 좋겠는데 이거 했다 저거 했다 집중을 못하니 능률이 좋지 않다..
+- 100 커버리지를 처음 달성했다! 자꾸 line 하나가 걸려서 생각했던 것보다 까다로웠다. 전부 작성하고 나니 꽤 뿌듯했다.
 
 ## 🔰 내일 계획
 - [ ] 코드숨 과제 피드백 받고 PR 하기
-- [ ] 리팩토링 8챕터 읽기
+- [ ] 리팩토링 8챕터 마저 읽기
 - [ ] TDD 책 읽기
 
 ## 🔥 일주일 계획
