--- a/202112/20211226.md
+++ b/202112/20211226.md
@@ -1,8 +1,8 @@
 ## ✅ 어제 계획한 것의 달성도
 
-- [ ] TDD 책 2챕터 읽기
-- [ ] TDD 책 2챕터까지 회고하며 정리하기
-- [ ] 코드숨 1차과제 PR 수정하기
+- [x] TDD 책 2챕터 읽기
+- [x] TDD 책 2챕터까지 회고하며 정리하기
+- [x] 코드숨 1차과제 PR 수정하기
 - [ ] 코드숨 2차과제 풀이보며 학습하고 정리하기
 - [ ] 코드숨 주간회고 작성하기
 
@@ -11,19 +11,34 @@
 
 - [ ] 코드숨 4주차 과제 클리어
 - [ ] 리팩터링 챕터별 정리
-- [ ] 리팩터링 스터디 참가
-- [ ] TDD 책 진도 빼기
+- [x] 리팩터링 스터디 참가
+- [x] TDD 책 진도 빼기
 - [x] 연간회고 초안 잡기
 
 ## 💬 배운내용
 
 - 오늘 할 일을 내일로 미루면 그 일은 안하게 된다. 절대 현재의 내 변명을 믿지 말자. 나는 더 공부할 수 있다.
+- [TDD 책 5장까지 정리](https://github.com/leeokdk/BOOKMON_stomach/blob/main/it_tdd%2BbyEx/1_money.md)
+- [리듀서 리팩토링하기](https://ko.redux.js.org/recipes/structuring-reducers/refactoring-reducer-example/)
+- [eslint no-prototype-builtins](https://eslint.org/docs/rules/no-prototype-builtins)
+  > handlers.hasOwnProperty(action.type) => Object.prototype.hasOwnProperty.call(handlers, action.type)
 
 ## ⏪ 회고
 - [연간회고 초안 작성](https://www.notion.so/2020-1378d23311934371b56675e95e2e71e6)
-
+- 초안을 너무 신나서 작성했더니 조금 자기혐오가 심하지 않았나 싶은 내용만 잔뜩이라 본격적으로 작성할 때엔 너무 그런 내용만 있지 않게끔 작성하고 싶다. 이런 회고를 쓸 때는 항상 마음을 새로 다잡게 되어 굉장히 기분전환이 된다. 이번주가 굉장히 불성실했다는 점만 빼면 더 좋았을텐데..
+- 한게 없어서 주간회고는 어쩌지.. 
+- 1차 과제도 정말 어마어마하게 시간이 걸리는 것 같다. 2차 과제는 풀이영상으로 봐도 모르겠던데, 어떻게든 영상의 내용을 익혀서 다음주 과제는 최대한 참여해봐야겠다.
 
 ## 🔰 내일 계획
 
+- [ ] TDD 책 10장까지 읽기
+- [ ] 코드숨 과제 PR
+- [ ] 코드숨 2차과제 풀이영상 복습
+- [ ] 코드숨 주간회고 작성하기
+- [ ] 리팩토링 9챕터 읽기
 
 ## 🔥 일주일 계획
+- [ ] 업무내용 중 필요한 부분은 최대한 기록
+- [ ] 코드숨 절대 빼먹지 말기
+- [ ] 목요일 스터디 참석하기
+- [ ] 연간회고 완성
