--- a/202201/0103.md
+++ b/202201/0103.md
@@ -1,11 +1,33 @@
+## ✅ 어제 계획한 것의 달성도
+
+- [ ] TDD 책 10장까지 읽기
+- [x] 월요일은 코드숨 과제 PR 하기
+- [ ] 리팩토링 읽기
+
+## 🔥 일주일 계획 진행도
+
+- [x] 코드숨 절대 빼먹지 말기 (하루라도 빠지면 체크사라짐)
+- [ ] 목요일 스터디 참석하고 회고 작성
+- [ ] 2022년 계획 수립
+- [ ] TDD책 1/3 읽기
+- [ ] 코드숨 최종 과제 구상 및 설계하기
+- [ ] Confluence 사용법 찾아보기. 강의를 보는게 나을까?
+
 
 ## 💬 배운내용
+- __react-router-dom 6v__ : 라우팅을 통한 화면전환 네비게이션 관리 기능.
+- react-router-dom 버전업되면서 바뀐점.
+  1. Swtich => Routes
+  2. exact 는 더이상 사용하지 않는다. (반대로 중첩라우팅 매칭 방식 *를 사용)
+  3. component => element
+  4. element 작성방식은 jsx
+- App의 테스트코드를 수월하게 작성하기 위해 BrowserRouter는 index에서 render.
 
-- 반성.. 결코 다시 반성..
 
 ## ⏪ 회고
 
 - 신정이 벌써 3일이나 지났다. 나는 오히려 1/1에 쉬지 않는게 도움이 될지도 모르겠다.. 멋지게 1일에 시작하고 싶었지만.. 그래도! 늦기전에! 새로운 마음으로 다시 시작하자!
+
 
 ## 🔰 내일 계획
 
@@ -20,3 +42,4 @@
 - [ ] 2022년 계획 수립
 - [ ] TDD책 1/3 읽기
 - [ ] 코드숨 마지막 과제 구상 및 설계하기
+- [ ] Confluence 사용법 찾아보기. 강의를 보는게 나을까?
