--- a/202201/0118.md
+++ b/202201/0118.md
@@ -1,11 +1,11 @@
 ## ✅ 내가 오늘 한 것
-- [ ] 8주차 코드숨 PR시작
+- [x] 8주차 코드숨 PR시작
 - [ ] TDD 읽고 정리
 - [ ] 설날 선물 쇼핑
 
 
 ## 💬 배운내용
-
+- actions와 reducer 합치기..
 
 
 ## ⏪ 회고
@@ -14,9 +14,13 @@
 
 
 ## 🔰 내일 계획
-
+- [ ] 8주차 코드숨 과제 이어서
+- [ ] TDD 읽고 정리
+- [ ] 설날 선물 쇼핑
 
 
 ## 🔥 일주일 계획
-
-
+- [ ] 8주차 코드숨 완료
+- [ ] 객체지향 책 완독
+- [ ] 노개북 클린코드 시작
+- [ ] 개인과제 설계하기
